# xflow

./: .gitignore  Makefile  README.md  TODO.md  dev-requirements.txt  pyproject.toml  requirements.txt  stats.json
conf/: logging.yml
conf/base/: catalog.yml  parameters.yml  parameters_collect.yml  parameters_config.yml  parameters_dataprep.yml  parameters_deploy.yml  parameters_experiment.yml  parameters_insights.yml  parameters_measure.yml  parameters_overrides.yml  parameters_setup.yml
include/x_flow/config/: experiments.csv  experiments.xlsx  param_mapping.yml
include/x_flow/raw_data/: DR_Demo_Bond_trading_RFQ_test.csv  clean_names.csv  clean_names_test.csv  clean_names_train.csv  nowcasting_data_test.csv  nowcasting_data_train.csv  search_space.csv
notebooks/: Untitled.ipynb  config_test.ipynb  design.ipynb  measure.ipynb  test_metrics.ipynb  testing.ipynb
src/controller/: app.py
src/datarobotx/idp/: autopilot.py  datasets.py  projects.py  use_cases.py
src/datarobotx/idp/common/: credentials_hooks.py
src/tests/pipelines/config/: test_pipeline.py
src/tests/pipelines/deploy/: test_pipeline.py
src/tests/pipelines/experiment/: test_pipeline.py
src/tests/pipelines/measure/: test_pipeline.py
src/utils/: dr_helpers.py  fire.py  x-flow.code-workspace
src/x_flow/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/x_flow/metrics/: generalized_auc.py  generalized_f1.py  implementations.py  metrics.py
src/x_flow/pipelines/collect/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/config/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/dataprep/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/deploy/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/experiment/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/insights/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/measure/: __init__.py  nodes.py  pipeline.py
src/x_flow/pipelines/setup/: __init__.py  nodes.py  pipeline.py
src/x_flow/utils/: data.py  dr_helpers.py  operator.py
src/x_flow/utils/common/: checkpoint_hooks.py  hashing.py
src/x_flow/utils/metrics/: dr_metrics.py  generalized_f1.py  implementations.py  mean_squared_error.py  metrics.py
src/x_flow/utils/preprocessing/: binary_transformer.py  data_preprocessor.py  fire.py  fire_implementation.py
tests/pipelines/collect/: test_pipeline.py
tests/pipelines/dataprep/: test_pipeline.py
tests/pipelines/insights/: test_pipeline.py
tests/pipelines/setup/: test_pipeline.py
