[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "x_flow"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
x-flow = "x_flow.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "x_flow.__version__" }

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "x_flow"
project_name = "X Flow"
kedro_init_version = "0.19.3"
tools = ['None']
example_pipeline = "False"
source_dir = "src"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/x_flow -ra"""

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["D", "F", "I"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true
forced-separate = ["datarobot", "datarobotx"]
