[project]
name = "x_flow"
readme = "README.md"
dynamic = ["dependencies", "version"]

[project.scripts]
x-flow = "x_flow.__main__:main"

[project.entry-points."kedro.hooks"]

[project.optional-dependencies]

[tool.kedro]
package_name = "x_flow"
project_name = "X Flow"
kedro_init_version = "0.19.3"
tools = ['None']
example_pipeline = "False"
source_dir = "src"

[build-system]
requires = ["setuptools >= 65.5.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
optional-dependencies = { dev = { file = ["dev-requirements.txt"] } }

[tool.setuptools.packages.find]
where = ["."]
# include = ["x_flow.*"]

[tool.ruff]
line-length = 100
src = ["src"]


[tool.ruff.lint]
select = ["F", "I"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
force-sort-within-sections = true
forced-separate = ["datarobot", "datarobotx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]

[[tool.mypy.overrides]]
module = ["fsspec", "requests_toolbelt", "joblib", "kedro_boot.*", "sklearn.*"]
ignore_missing_imports = true
